# FluidSimulator

./: .gitmodules  Cargo.toml
shaders/: add_force.hlsl  density_visualize.hlsl  final_blit.hlsl
src/: fluid_simulator.rs  lib.rs  main.rs  main_loop.rs  velocity_field_routine.rs
src/shaders/: add_force.hlsl  density_visualize.hlsl  velocity_calculations.hlsl  velocity_field.hlsl
