[package]
name = "fluid_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "./kajiya/crates/lib/kajiya" }
kajiya-imgui = { path = "kajiya/crates/lib/kajiya-imgui" }

anyhow = "1.0"
glam = { version = "0.18", features = ["serde"] }
winit = "0.25"
imgui = { version = "0.7" }

[patch.crates-io]
# Official ray-tracing extensions
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
spirv_headers = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
